scss empezado e imagenes descargadas

--- a/index.html
+++ b/index.html
@@ -10,8 +10,33 @@
 </head>
 <body>
 <section id="main">
-    <main>
 
+    <main class="students">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </main>
 </section>
 </body>
