--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
 <body>
 <section id="main">
 
+    <main class="teachers">
+
+    </main>
     <main class="students">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+
+
+
     </main>
 </section>
 </body>
