--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 
     </main>
     <main class="students">
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
-        <div><img src="/assets/los%20reyes%20mambo%20kingz.webp" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
 
 
 
