Avances en flex gifs subidos falta arreglar z-index

--- a/index.html
+++ b/index.html
@@ -13,32 +13,36 @@
 
     <main class="teachers">
 
+        <div> <img class="gif" src="assets/sinFondo/profesores/ZENAIDA-unscreen.gif" alt=""></div>
+        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"><img class="gif" src="assets/sinFondo/profesores/RAFA-unscreen.gif" alt=""></div>
+        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/ANTONIOPROFE-unscreen.gif" alt=""></div>
+        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/FERNANDO-unscreen.gif" alt=""></div>
+        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/PABLOPROFESOR-unscreen.gif" alt=""></div>
+        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""></div>
+        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""></div>
     </main>
     <main class="students">
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div><img src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-
-
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
 
     </main>
 </section>
