Orla casi lista

--- a/index.html
+++ b/index.html
@@ -13,36 +13,198 @@
 
     <main class="teachers">
 
-        <div> <img class="gif" src="assets/sinFondo/profesores/ZENAIDA-unscreen.gif" alt=""></div>
-        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"><img class="gif" src="assets/sinFondo/profesores/RAFA-unscreen.gif" alt=""></div>
-        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/ANTONIOPROFE-unscreen.gif" alt=""></div>
-        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/FERNANDO-unscreen.gif" alt=""></div>
-        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/PABLOPROFESOR-unscreen.gif" alt=""></div>
-        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""></div>
-        <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores"> <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""></div>
+        <div>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
+                <img class="gif" src="assets/sinFondo/profesores/RAFA-unscreen.gif" alt="Rafa"></div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
+                <img class="gif" src="assets/sinFondo/profesores/ANTONIOPROFE-unscreen.gif" alt="Antinio">
+            </div>
+            <span>Name</span>
+
+        </div>
+        <div>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
+                <img class="gif" src="assets/sinFondo/profesores/FERNANDO-unscreen.gif" alt=""></div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
+                <img class="gif" src="assets/sinFondo/profesores/ZENAIDA-unscreen.gif" alt=""></div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div>
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
+                <img class="gif" src="assets/sinFondo/profesores/PABLOPROFESOR-unscreen.gif" alt=""></div>
+
+            <span>Name</span>
+        </div>
+        <div>
+            <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
+                <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""></div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
+                <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""></div>
+            <span>Name</span>
+        </div>
     </main>
     <main class="students">
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
-        <div class=""><img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent"></div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/ANDRES-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/ALEJANDRO-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/JUANJO-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/ANA-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/ANTONIO-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/BLANCAS-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/CADENILLAS-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/CARABALLO-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/CARABANTE-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/CRESPO-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/JAIME-remastered.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/EDUARDO-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/JAVIER-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/JOSELUIS-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/JULIA-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/MOISES-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/NATAN-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/PABLO-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/RAMON-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/REY-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/SANCHEZ-unscreen.gif" alt="">
+            </div>
+            <span>Name</span>
+        </div>
 
     </main>
 </section>
