Nombres puestos y ordenados

--- a/index.html
+++ b/index.html
@@ -17,44 +17,44 @@
             <div>
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
                 <img class="gif" src="assets/sinFondo/profesores/RAFA-unscreen.gif" alt="Rafa"></div>
-            <span>Name</span>
+            <span>Rafael del Rio</span>
         </div>
         <div>
             <div>
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
                 <img class="gif" src="assets/sinFondo/profesores/ANTONIOPROFE-unscreen.gif" alt="Antinio">
             </div>
-            <span>Name</span>
+            <span>Antonio Lozano</span>
 
         </div>
         <div>
             <div>
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
                 <img class="gif" src="assets/sinFondo/profesores/FERNANDO-unscreen.gif" alt=""></div>
-            <span>Name</span>
+            <span>Fernando Vargas</span>
         </div>
         <div>
             <div>
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
                 <img class="gif" src="assets/sinFondo/profesores/ZENAIDA-unscreen.gif" alt=""></div>
-            <span>Name</span>
+            <span>Zenaida González</span>
         </div>
         <div>
             <div>
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
                 <img class="gif" src="assets/sinFondo/profesores/PABLOPROFESOR-unscreen.gif" alt=""></div>
 
-            <span>Name</span>
+            <span>Pablo Galván</span>
         </div>
         <div>
             <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
                 <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""></div>
-            <span>Name</span>
+            <span>Cristina y Carmen</span>
         </div>
         <div>
             <div><img class="crown" src="/assets/laurel-wreath-png.png" alt="Profesores">
-                <img class="gif" src="assets/sinFondo/profesores/CRISTINACARMEN-unscreen.gif" alt=""></div>
-            <span>Name</span>
+                <img class="gif" src="assets/sinFondo/profesores/ROCIO-unscreen.gif" alt=""></div>
+            <span>Rocio</span>
         </div>
     </main>
     <main class="students">
@@ -63,149 +63,150 @@
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/ANDRES-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Daniel Andrés</span>
         </div>
         <div>
-            <div class="">
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/ALEJANDRO-unscreen.gif" alt="">
-            </div>
-            <span>Name</span>
-        </div>
-        <div>
-            <div class="">
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/JUANJO-unscreen.gif" alt="">
-            </div>
-            <span>Name</span>
-        </div>
-        <div>
-            <div class="">
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/ANA-unscreen.gif" alt="">
-            </div>
-            <span>Name</span>
-        </div>
-        <div>
-            <div class="">
+        <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/ANTONIO-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Antonio Batista</span>
         </div>
         <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/BLANCAS-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Daniel Blancas</span>
         </div>
         <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/CADENILLAS-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Diego Cadenillas</span>
         </div>
-        <div>
+                <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/CARABALLO-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Álvaro Caraballo</span>
         </div>
-        <div>
+                <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/CARABANTE-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
-        </div>
-        <div>
-            <div class="">
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/CRESPO-unscreen.gif" alt="">
-            </div>
-            <span>Name</span>
-        </div>
-        <div>
-            <div class="">
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/JAIME-remastered.gif" alt="">
-            </div>
-            <span>Name</span>
-        </div>
-        <div>
-            <div class="">
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/EDUARDO-unscreen.gif" alt="">
-            </div>
-            <span>Name</span>
-        </div>
-        <div>
-            <div class="">
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/JAVIER-unscreen.gif" alt="">
-            </div>
-            <span>Name</span>
-        </div>
-        <div>
-            <div class="">
-                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/JOSELUIS-unscreen.gif" alt="">
-            </div>
-            <span>Name</span>
+            <span>Álvaro Carabante</span>
         </div>
         <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/JULIA-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Julia Carrera</span>
         </div>
-        <div>
+                <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/MOISES-unscreen.gif" alt="">
+                <img class="gif" src="assets/sinFondo/alumnos/JUANJO-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Juan José Catalá</span>
         </div>
         <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/NATAN-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Natan Cejas</span>
+        </div>
+                <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/CRESPO-unscreen.gif" alt="">
+            </div>
+            <span>Miguel Crespo</span>
         </div>
         <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/PABLO-unscreen.gif" alt="">
+                <img class="gif" src="assets/sinFondo/alumnos/EDUARDO-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Eduardo Daza</span>
+        </div>
+        <div>
+        <div class="">
+            <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+            <img class="gif" src="assets/sinFondo/alumnos/RAMON-unscreen.gif" alt="">
+        </div>
+        <span>Ramón Gallardo</span>
+    </div>
+    <div>
+    <div class="">
+        <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+        <img class="gif" src="assets/sinFondo/alumnos/JOSELUIS-unscreen.gif" alt="">
+    </div>
+    <span>Jose Luis Granado</span>
+</div>
+<div>
+    <div class="">
+        <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+        <img class="gif" src="assets/sinFondo/alumnos/ANA-unscreen.gif" alt="">
+    </div>
+    <span>Ana Montes</span>
+</div>
+            <div>
+                <div class="">
+                    <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                    <img class="gif" src="assets/sinFondo/alumnos/MOISES-unscreen.gif" alt="">
+                </div>
+                <span>Moisés Moreno</span>
+            </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/JAIME-remastered.gif" alt="">
+            </div>
+            <span>Jaime Pérez</span>
         </div>
         <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
-                <img class="gif" src="assets/sinFondo/alumnos/RAMON-unscreen.gif" alt="">
+                <img class="gif" src="assets/sinFondo/alumnos/ALEJANDRO-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Alejandro Raposo</span>
         </div>
+        <div>
+
         <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/REY-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Cristian Rey</span>
         </div>
         <div>
             <div class="">
                 <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
                 <img class="gif" src="assets/sinFondo/alumnos/SANCHEZ-unscreen.gif" alt="">
             </div>
-            <span>Name</span>
+            <span>Gonzalo Sánchez </span>
         </div>
-
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/PABLO-unscreen.gif" alt="">
+            </div>
+            <span>Pablo Valladares</span>
+        </div>
+        <div>
+            <div class="">
+                <img class="crown" src="/assets/laurel-wreath-png.png" alt="Estudent">
+                <img class="gif" src="assets/sinFondo/alumnos/JAVIER-unscreen.gif" alt="">
+            </div>
+            <span>Javier Verano</span>
+        </div>
     </main>
 </section>
 </body>
