Hemos añadido cambios menores y también la imagen de fondo para el top header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <title>Orla</title>
   </head>
   <body>
-    <header></header>
+    <div id="headerText">
+      <div><h1>I.E.S Mar de Cádiz</h1></div>
+
+      <div><h1>2º DAW</h1></div>
+
+      <div><h1>Curso 2023/2024</h1></div>
+    </div>
+    <header>
+        
+    </header>
     <section id="main">
       <main class="teachers">
         <div>
