--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div><h1>Curso 2023/2024</h1></div>
     </div>
     <header>
-        
+
     </header>
     <section id="main">
       <main class="teachers">
@@ -226,6 +226,8 @@
       </main>
     </section>
     <script>
+      let students =
+
       setTimeout(() => {
         document.getElementById("sanchez").src = "assets/sinFondo/alumnos/SANCHEZ-unscreen.gif";
       }, 4300);
